Atmospheric Model: Take 1

--- a/docs/_sources/atmosphere.ipynb
+++ b/docs/_sources/atmosphere.ipynb
@@ -2,30 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "75a561d7",
    "metadata": {},
    "source": [
-    "# Burst Calculator"
+    "# Atmospheric Model\n",
+    "\n",
+    "The basis of all of our calculations and simulations is a model of Earth's atmosphere, of which there are several.  The [International Standard Atmosphere](https://en.wikipedia.org/wiki/International_Standard_Atmosphere) (ISA) is used most commonl in the field of aviation, so that is what we will use.\n",
+    "\n",
+    "The ISA is a mathematical model of the atmosphere that assumes a linear temperature gradient against altitude, and derives pressure and density from the [ideal gas law](https://en.wikipedia.org/wiki/Ideal_gas_law) and [hydrostatic equilibrium](https://en.wikipedia.org/wiki/Hydrostatic_equilibrium)."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "04de8172",
    "metadata": {},
    "source": [
-    "This notebook serves as documentation for the models and calculations that are implemented in code in this package."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Symbols used\n",
+    "## Symbols used\n",
     "\n",
     "Since the primary source upon which the models in this package are built from is the ISA, I will use the symbols defined in the paper that defined it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
+   "id": "e6f334b3",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "$\\rho$ | Density"
       ],
       "text/plain": [
-       "<symbols.SymbolTable at 0x104ace9d0>"
+       "<symbols.SymbolTable at 0x1111380d0>"
       ]
      },
      "metadata": {},
@@ -65,20 +65,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ecb088bb",
    "metadata": {},
    "source": [
-    "## Atmospheric Model\n",
-    "\n",
-    "The basis of all of our calculations and simulations is a model of Earth's atmosphere, of which there are several.  The [International Standard Atmosphere](https://en.wikipedia.org/wiki/International_Standard_Atmosphere) (ISA) is used most commonl in the field of aviation, so that is what we will use.\n",
-    "\n",
-    "The ISA is a mathematical model of the atmosphere that assumes a linear temperature gradient against altitude, and derives pressure and density from the [ideal gas law](https://en.wikipedia.org/wiki/Ideal_gas_law) and [hydrostatic equilibrium](https://en.wikipedia.org/wiki/Hydrostatic_equilibrium)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hydrostatic equation\n",
+    "## Hydrostatic equation\n",
     "\n",
     "Our model begins by noting that since the atmosphere is not floating away into space, nor sinking to the ground, it must be at equilibrium: all vertical forces must sum to zero. That is to say, it is at [hydrostatic equilibrium](https://en.wikipedia.org/wiki/Hydrostatic_equilibrium). For a column of air in the atmosphere, the 3 forces we'll model are from the surrounding air pressure - air pushing up from below, air pushing down from above - and the weight of the column of air itself:\n",
     "\n",
@@ -89,7 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
+   "id": "7815081b",
    "metadata": {
     "scrolled": true
    },
@@ -103,7 +94,7 @@
        "Eq(-A*P + A*P_b - g*m, 0)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
+   "id": "a0011872",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +118,7 @@
        "Eq(-A*P + A*P_b - V*g*rho, 0)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
+   "id": "1a65cd13",
    "metadata": {
     "scrolled": true
    },
@@ -153,7 +146,7 @@
        "Eq(-A*P + A*P_b - A*g*h*rho, 0)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
+   "id": "32f03b26",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +171,7 @@
        "Eq(P - P_b + g*h*rho, 0)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
+   "id": "cc0c4981",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +196,7 @@
        "Eq(P - P_b + g*h*rho, 0)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,33 +207,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 7,
+   "id": "edd2348d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - \\log{\\left(p_{1} \\right)} + \\log{\\left(p_{2} \\right)}$"
+       "$\\displaystyle P = P_{b} - g h \\rho$"
       ],
       "text/plain": [
-       "-log(p_1) + log(p_2)"
+       "Eq(P, P_b - g*h*rho)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z, z_1, z_2, g, R, T_v, dz = symbols('z z_1 z_2 g R T_v dz', real=True)\n",
-    "p_1, p_2, dp, p = symbols('p_1 p_2 dp p', real=True)\n",
-    "\n",
-    "P = Symbol('P')\n",
-    "integrate(1/P, (P, p_1, p_2))"
+    "_.solve(P)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e18d1bff",
    "metadata": {},
    "source": [
     "### Ideal Gas Law\n",
@@ -249,6 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "a90625d6",
    "metadata": {
     "scrolled": true
    },
@@ -276,6 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "31df0c71",
    "metadata": {},
    "outputs": [
     {
@@ -301,20 +296,23 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "52cce5ae",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'subs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/gw/fwbnxl652jx80ff49ndt1x6jzjvjfq/T/ipykernel_53495/460363906.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Density is defined as mass / volume:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# rho = m / V\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0m_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mP\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrho\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'subs'"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle P = \\frac{R^{*} T \\rho}{M}$"
+      ],
+      "text/plain": [
+       "Eq(P, R^**T*rho/M)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -325,11 +323,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "e770ac52",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle P = R T \\rho$"
+      ],
+      "text/plain": [
+       "Eq(P, R*T*rho)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Finally, the specific gas constant of a gas is defined as the universal gas constant / molecular mass:\n",
     "# R_sp = R / M\n",
@@ -339,6 +352,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad7c9582",
    "metadata": {},
    "source": [
     "## Burst Altitude\n",
@@ -349,9 +363,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "eaa1594f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{4 \\pi P r^{3}}{3} = R^{*} T n$"
+      ],
+      "text/plain": [
+       "Eq(4*pi*P*r**3/3, R^**T*n)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{3 R^{*} T n}{4 \\pi r^{3}}$"
+      ],
+      "text/plain": [
+       "3*R^**T*n/(4*pi*r**3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'(3/4)*R^**T*n/(math.pi*r**3)'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r = symbols('r')\n",
     "\n",
@@ -371,9 +421,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "07ef0964",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle F_{b} = V g \\left(- \\rho_{air} + \\rho_{gas}\\right)$"
+      ],
+      "text/plain": [
+       "Eq(F_b, V*g*(-rho_air + rho_gas))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sympy import *\n",
     "\n",
@@ -393,6 +458,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b397d232",
    "metadata": {},
    "source": [
     "## References\n",
@@ -406,6 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1e793ecc",
    "metadata": {},
    "outputs": [],
    "source": []
