--- a/docs/_sources/atmosphere.ipynb
+++ b/docs/_sources/atmosphere.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "75a561d7",
+   "id": "4076562c",
    "metadata": {},
    "source": [
     "# Atmospheric Model\n",
     "\n",
-    "The basis of all of our calculations and simulations is a model of Earth's atmosphere, of which there are several.  The [International Standard Atmosphere](https://en.wikipedia.org/wiki/International_Standard_Atmosphere) (ISA) is used most commonl in the field of aviation, so that is what we will use.\n",
+    "The basis of our simulation is a model of Earth's atmosphere, of which there are several.  The [International Standard Atmosphere](https://en.wikipedia.org/wiki/International_Standard_Atmosphere) (ISA) is used by ICAO, is relatively simple, and accurate enough for our purposes.\n",
     "\n",
     "The ISA is a mathematical model of the atmosphere that assumes a linear temperature gradient against altitude, and derives pressure and density from the [ideal gas law](https://en.wikipedia.org/wiki/Ideal_gas_law) and [hydrostatic equilibrium](https://en.wikipedia.org/wiki/Hydrostatic_equilibrium)."
    ]
@@ -25,54 +25,46 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e6f334b3",
+   "id": "7cd05c5a",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/markdown": [
-       "Symbol | Description\n",
-       "-------|:-----------\n",
-       "$A$ | Area\n",
-       "$F$ | Force\n",
-       "$g$ | Acceleration due to gravity\n",
-       "$H$ | Geopotential height\n",
-       "$h$ | Geometric height\n",
-       "$P$ | Pressure\n",
-       "$P_{b}$ | Pressure at the base of an atmospheric layer\n",
-       "$M$ | Molecular mass\n",
-       "$m$ | Mass\n",
-       "$n$ | Amount of substance\n",
-       "$R^{*}$ | Universal gas constant\n",
-       "$R$ | Specific gas constant\n",
-       "$T$ | Thermodynamic temperature\n",
-       "$V$ | Volume\n",
-       "$\\rho$ | Density"
+      "text/html": [
+       "<table><tr><th>Symbol</th><th>Description</th></tr><tr><td>$A$</td><td>Area</td></tr><tr><td>$F$</td><td>Force</td></tr><tr><td>$g$</td><td>Acceleration due to gravity</td></tr><tr><td>$H$</td><td>Geopotential height</td></tr><tr><td>$h$</td><td>Geometric height</td></tr><tr><td>$P$</td><td>Pressure</td></tr><tr><td>$P_{b}$</td><td>Pressure at the base of an atmospheric layer</td></tr><tr><td>$M$</td><td>Molecular mass</td></tr><tr><td>$m$</td><td>Mass</td></tr><tr><td>$n$</td><td>Amount of substance</td></tr><tr><td>$R^{*}$</td><td>Universal gas constant</td></tr><tr><td>$R$</td><td>Specific gas constant</td></tr><tr><td>$T$</td><td>Thermodynamic temperature</td></tr><tr><td>$V$</td><td>Volume</td></tr><tr><td>$\\rho$</td><td>Density</td></tr>"
       ],
       "text/plain": [
-       "<symbols.SymbolTable at 0x1111380d0>"
+       "<symple.SymbolTable at 0x10d8526a0>"
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from symbols import *\n",
-    "\n",
-    "display(symbol_table)"
+    "from preamble import *\n",
+    "symbol_table\n",
+    "## WIP"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ecb088bb",
+   "id": "57465481",
    "metadata": {},
    "source": [
     "## Hydrostatic equation\n",
     "\n",
     "Our model begins by noting that since the atmosphere is not floating away into space, nor sinking to the ground, it must be at equilibrium: all vertical forces must sum to zero. That is to say, it is at [hydrostatic equilibrium](https://en.wikipedia.org/wiki/Hydrostatic_equilibrium). For a column of air in the atmosphere, the 3 forces we'll model are from the surrounding air pressure - air pushing up from below, air pushing down from above - and the weight of the column of air itself:\n",
     "\n",
-    "$0 = F_{below} + F_{above} + F_{weight}$\n",
+    "$$\n",
+    "\\require{action}\n",
+    "\\texttip{math}{tip}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "F_{below} + F_{above} + F_{weight} = 0\n",
+    "$$\n",
     "\n",
     "Replacing with the definitions of pressure and weight gives us (For reasons that will become apparent, we will refer to the pressure at the base of the cylinder as $P_b$ and the pressure at the top simply as $P$):"
    ]
@@ -208,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "edd2348d",
+   "id": "96ffc52a",
    "metadata": {},
    "outputs": [
     {
@@ -463,6 +455,8 @@
    "source": [
     "## References\n",
     "\n",
+    "* [Here](https://atoc.colorado.edu/~cassano/atoc5050/Lecture_Notes/wh_ch3_part1.pdf)\n",
+    "* [ICAO Standard Atmosphere](http://www.aviationchief.com/uploads/9/2/0/9/92098238/icao_doc_7488_-_manual_of_icao_standard_atmosphere_-_3rd_edition_-_1994.pdf)\n",
     "* [ISO 2533-1975: Standard Atmosphere](https://cdn.standards.iteh.ai/samples/7472/c203e9121d4c40e5bdc98844b1a1e2f4/ISO-2533-1975.pdf)\n",
     "* [Inspiration](https://github.com/cuspaceflight/cusf-burst-calc/blob/master/js/calc.js)\n",
     "* [And](https://northstar-www.dartmouth.edu/~klynch/pmwiki-gc/uploads/BalloonCalulations.pdf)\n",
