--- a/book/descent.ipynb
+++ b/book/descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "75f4ac6b",
+   "id": "d71e559e",
    "metadata": {},
    "source": [
     "# Descent Rate\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1b0196ae",
+   "id": "02c6ca90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d67a186c",
+   "id": "3869067f",
    "metadata": {
     "scrolled": true
    },
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "406330c9",
+   "id": "85d476ff",
    "metadata": {
     "scrolled": true
    },
@@ -77,33 +77,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b6441b90",
+   "id": "a3230ca8",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{\\pi C_{d} D^{2} \\rho v^{2}}{8} = g m$"
-      ],
-      "text/plain": [
-       "Eq(pi*C_d*D**2*rho*v**2/8, g*m)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "_.replace(A, pi * (D/2)**2)"
+    "terminal_velocity = _.replace(A, pi * (D/2)**2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "80a70f3e",
+   "id": "aa64a48d",
    "metadata": {
     "scrolled": true
    },
@@ -123,25 +109,26 @@
     }
    ],
    "source": [
-    "_.solve(D**2)"
+    "terminal_velocity.solve(D**2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dfd35188",
+   "id": "f3857946",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "calc_desired_diameter = lambdify([g,m,C_d,rho,v], sqrt(_.rhs), \"numpy\")"
+    "calc_velocity = lambdify([g,m,C_d,rho,D], sqrt(terminal_velocity.solve(v**2).rhs), \"numpy\")\n",
+    "calc_diameter = lambdify([g,m,C_d,rho,v], sqrt(_.rhs), \"numpy\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7866325c",
+   "id": "5b40647e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "13917e84",
+   "id": "149639ba",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7346f5f1",
+   "id": "6fd1dea6",
    "metadata": {
     "scrolled": true
    },
@@ -201,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5e661403",
+   "id": "105fcb4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "423542b8",
+   "execution_count": 11,
+   "id": "4a2c3886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +213,13 @@
     "g = 9.86 * units.m / (units.s ** 2)\n",
     "C_d = 0.78\n",
     "rho = 1.22 * units.kg / (units.m ** 3)\n",
-    "diameter = calc_desired_diameter(g, total_mass, C_d, rho, velocity).to_base_units()"
+    "diameter = calc_diameter(g, total_mass, C_d, rho, velocity).to_base_units()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "66f7dd79",
+   "execution_count": 12,
+   "id": "192c76c6",
    "metadata": {},
    "outputs": [
     {
@@ -263,8 +250,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "abb772fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[66.47964683155732 53.183717465245856 44.31976455437154]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>gram<sup>0.5</sup> meter<sup>2</sup>/(foot kilogram<sup>0.5</sup> second)</td></tr></tbody></table>"
+      ],
+      "text/latex": [
+       "$\\begin{pmatrix}66.47964683155732 & 53.183717465245856 & 44.31976455437154\\end{pmatrix}\\ \\frac{\\mathrm{gram}^{0.5} \\cdot \\mathrm{meter}^{2}}{\\left(\\mathrm{foot} \\cdot \\mathrm{kilogram}^{0.5} \\cdot \\mathrm{second}\\right)}$"
+      ],
+      "text/plain": [
+       "array([66.47964683, 53.18371747, 44.31976455]) <Unit('gram ** 0.5 * meter ** 2 / foot / kilogram ** 0.5 / second')>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc_velocity(g, total_mass, C_d, rho, rocketman_chutes)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "21e6c162",
+   "id": "07352198",
    "metadata": {},
    "outputs": [],
    "source": []
